// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu should render link item logo correctly 1`] = `
<span
  className="nav-item-link is-logo"
>
  <div
    className="nav-item-icon"
  >
    <ReapitHouseIcon />
  </div>
</span>
`;

exports[`Menu should render link item primary correctly 1`] = `
<Link
  className="nav-item-link is-primary"
  to="/apps"
>
  <div
    className="nav-item-icon"
  >
    <AppsIcon />
  </div>
  <div
    className="nav-item-title"
  >
    Apps
  </div>
</Link>
`;

exports[`Menu should render link item secondary correctly 1`] = `
<Link
  className="nav-item-link is-primary"
  to="/settings"
>
  <div
    className="nav-item-icon"
  >
    <AccountIcon />
  </div>
  <div
    className="nav-item-title"
  >
    Settings
  </div>
</Link>
`;

exports[`Menu should render menu correctly 1`] = `
<nav
  className="nav-bar "
>
  <ul>
    <LinkItem
      item={
        Object {
          "icon": <ReapitHouseIcon />,
          "key": "LOGO",
          "type": "LOGO",
        }
      }
      key="LOGO"
    >
      <li
        className="nav-item "
        onClick={[Function]}
      >
        <div>
          <ReapitHouseIcon />
        </div>
      </li>
    </LinkItem>
    <LinkItem
      activeItemRef={
        Object {
          "current": null,
        }
      }
      item={
        Object {
          "icon": <AppsIcon />,
          "key": "APPS",
          "title": "Apps",
          "type": "PRIMARY",
          "url": "/apps",
        }
      }
      key="APPS"
    >
      <li
        className="nav-item is-active"
        onClick={[Function]}
      >
        <div>
          <AppsIcon />
        </div>
        <div
          className="nav-item-title"
        >
          Apps
        </div>
      </li>
    </LinkItem>
    <LinkItem
      item={
        Object {
          "icon": <AnalyticsIcon />,
          "key": "ANALYTICS",
          "title": "Analytics",
          "type": "PRIMARY",
          "url": "/installed",
        }
      }
      key="ANALYTICS"
    >
      <li
        className="nav-item "
        onClick={[Function]}
      >
        <div>
          <AnalyticsIcon />
        </div>
        <div
          className="nav-item-title"
        >
          Analytics
        </div>
      </li>
    </LinkItem>
    <LinkItem
      item={
        Object {
          "icon": <ApiIcon />,
          "key": "API",
          "title": "API",
          "type": "PRIMARY",
          "url": "/api",
        }
      }
      key="API"
    >
      <li
        className="nav-item "
        onClick={[Function]}
      >
        <div>
          <ApiIcon />
        </div>
        <div
          className="nav-item-title"
        >
          API
        </div>
      </li>
    </LinkItem>
    <LinkItem
      item={
        Object {
          "icon": <WebhooksIcon />,
          "key": "WEBHOOKS",
          "title": "Webhooks",
          "type": "PRIMARY",
          "url": "/webhooks",
        }
      }
      key="WEBHOOKS"
    >
      <li
        className="nav-item "
        onClick={[Function]}
      >
        <div>
          <WebhooksIcon />
        </div>
        <div
          className="nav-item-title"
        >
          Webhooks
        </div>
      </li>
    </LinkItem>
    <LinkItem
      item={
        Object {
          "icon": <DocsIcon />,
          "key": "DOCS",
          "title": "Docs",
          "type": "PRIMARY",
          "url": "/docs",
        }
      }
      key="DOCS"
    >
      <li
        className="nav-item "
        onClick={[Function]}
      >
        <div>
          <DocsIcon />
        </div>
        <div
          className="nav-item-title"
        >
          Docs
        </div>
      </li>
    </LinkItem>
    <LinkItem
      item={
        Object {
          "icon": <DesktopIcon />,
          "key": "DESKTOP",
          "title": "Desktop",
          "type": "PRIMARY",
          "url": "/desktop",
        }
      }
      key="DESKTOP"
    >
      <li
        className="nav-item "
        onClick={[Function]}
      >
        <div>
          <DesktopIcon />
        </div>
        <div
          className="nav-item-title"
        >
          Desktop
        </div>
      </li>
    </LinkItem>
    <LinkItem
      item={
        Object {
          "icon": <HelpIcon />,
          "key": "HELP",
          "title": "Help",
          "type": "PRIMARY",
          "url": "/help",
        }
      }
      key="HELP"
    >
      <li
        className="nav-item "
        onClick={[Function]}
      >
        <div>
          <HelpIcon />
        </div>
        <div
          className="nav-item-title"
        >
          Help
        </div>
      </li>
    </LinkItem>
    <LinkItem
      item={
        Object {
          "icon": <MarketplaceIcon />,
          "key": "MARKETPLACE",
          "title": "Marketplace",
          "type": "PRIMARY",
          "url": "/marketplace",
        }
      }
      key="MARKETPLACE"
    >
      <li
        className="nav-item "
        onClick={[Function]}
      >
        <div>
          <MarketplaceIcon />
        </div>
        <div
          className="nav-item-title"
        >
          Marketplace
        </div>
      </li>
    </LinkItem>
    <LinkItem
      item={
        Object {
          "icon": <AccountIcon />,
          "key": "SETTINGS",
          "title": "Settings",
          "type": "PRIMARY",
          "url": "/settings",
        }
      }
      key="SETTINGS"
    >
      <li
        className="nav-item "
        onClick={[Function]}
      >
        <div>
          <AccountIcon />
        </div>
        <div
          className="nav-item-title"
        >
          Settings
        </div>
      </li>
    </LinkItem>
  </ul>
</nav>
`;

exports[`Menu should render menu correctly when mode prop is undefined 1`] = `
<nav
  className="nav-bar is-desktop"
>
  <ul>
    <LinkItem
      item={
        Object {
          "icon": <ReapitHouseIcon />,
          "key": "LOGO",
          "type": "LOGO",
        }
      }
      key="LOGO"
    >
      <li
        className="nav-item "
        onClick={[Function]}
      >
        <div>
          <ReapitHouseIcon />
        </div>
      </li>
    </LinkItem>
    <LinkItem
      activeItemRef={
        Object {
          "current": null,
        }
      }
      item={
        Object {
          "icon": <AppsIcon />,
          "key": "APPS",
          "title": "Apps",
          "type": "PRIMARY",
          "url": "/apps",
        }
      }
      key="APPS"
    >
      <li
        className="nav-item is-active"
        onClick={[Function]}
      >
        <div>
          <AppsIcon />
        </div>
        <div
          className="nav-item-title"
        >
          Apps
        </div>
      </li>
    </LinkItem>
    <LinkItem
      item={
        Object {
          "icon": <AnalyticsIcon />,
          "key": "ANALYTICS",
          "title": "Analytics",
          "type": "PRIMARY",
          "url": "/installed",
        }
      }
      key="ANALYTICS"
    >
      <li
        className="nav-item "
        onClick={[Function]}
      >
        <div>
          <AnalyticsIcon />
        </div>
        <div
          className="nav-item-title"
        >
          Analytics
        </div>
      </li>
    </LinkItem>
    <LinkItem
      item={
        Object {
          "icon": <ApiIcon />,
          "key": "API",
          "title": "API",
          "type": "PRIMARY",
          "url": "/api",
        }
      }
      key="API"
    >
      <li
        className="nav-item "
        onClick={[Function]}
      >
        <div>
          <ApiIcon />
        </div>
        <div
          className="nav-item-title"
        >
          API
        </div>
      </li>
    </LinkItem>
    <LinkItem
      item={
        Object {
          "icon": <WebhooksIcon />,
          "key": "WEBHOOKS",
          "title": "Webhooks",
          "type": "PRIMARY",
          "url": "/webhooks",
        }
      }
      key="WEBHOOKS"
    >
      <li
        className="nav-item "
        onClick={[Function]}
      >
        <div>
          <WebhooksIcon />
        </div>
        <div
          className="nav-item-title"
        >
          Webhooks
        </div>
      </li>
    </LinkItem>
    <LinkItem
      item={
        Object {
          "icon": <DocsIcon />,
          "key": "DOCS",
          "title": "Docs",
          "type": "PRIMARY",
          "url": "/docs",
        }
      }
      key="DOCS"
    >
      <li
        className="nav-item "
        onClick={[Function]}
      >
        <div>
          <DocsIcon />
        </div>
        <div
          className="nav-item-title"
        >
          Docs
        </div>
      </li>
    </LinkItem>
    <LinkItem
      item={
        Object {
          "icon": <DesktopIcon />,
          "key": "DESKTOP",
          "title": "Desktop",
          "type": "PRIMARY",
          "url": "/desktop",
        }
      }
      key="DESKTOP"
    >
      <li
        className="nav-item "
        onClick={[Function]}
      >
        <div>
          <DesktopIcon />
        </div>
        <div
          className="nav-item-title"
        >
          Desktop
        </div>
      </li>
    </LinkItem>
    <LinkItem
      item={
        Object {
          "icon": <HelpIcon />,
          "key": "HELP",
          "title": "Help",
          "type": "PRIMARY",
          "url": "/help",
        }
      }
      key="HELP"
    >
      <li
        className="nav-item "
        onClick={[Function]}
      >
        <div>
          <HelpIcon />
        </div>
        <div
          className="nav-item-title"
        >
          Help
        </div>
      </li>
    </LinkItem>
    <LinkItem
      item={
        Object {
          "icon": <MarketplaceIcon />,
          "key": "MARKETPLACE",
          "title": "Marketplace",
          "type": "PRIMARY",
          "url": "/marketplace",
        }
      }
      key="MARKETPLACE"
    >
      <li
        className="nav-item "
        onClick={[Function]}
      >
        <div>
          <MarketplaceIcon />
        </div>
        <div
          className="nav-item-title"
        >
          Marketplace
        </div>
      </li>
    </LinkItem>
    <LinkItem
      item={
        Object {
          "icon": <AccountIcon />,
          "key": "SETTINGS",
          "title": "Settings",
          "type": "PRIMARY",
          "url": "/settings",
        }
      }
      key="SETTINGS"
    >
      <li
        className="nav-item "
        onClick={[Function]}
      >
        <div>
          <AccountIcon />
        </div>
        <div
          className="nav-item-title"
        >
          Settings
        </div>
      </li>
    </LinkItem>
  </ul>
</nav>
`;
